2008-07-11  Marek Safar  <marek.safar@gmail.com>

	* anonymous.cs: Mutate anonymous method type.

2008-07-11  Marek Safar  <marek.safar@gmail.com>

	* ecore.cs, anonymous.cs: Mutate field expressions.

2008-07-10  Marek Safar  <marek.safar@gmail.com>

	A fix for bug #369670
	* linq.cs, statement.cs: Use explicit block for query expressions variables.

2008-07-10  Marek Safar  <marek.safar@gmail.com>

	* report.cs, ecore.cs: Flush recorder only when silent mode is off.

2008-07-10  Raja R Harinath  <harinath@hurrynot.org>

	Fix bug #314902
	* cs-tokenizer.cs (is_punct): If a generic lookahead is looking
	only one '>', and finds a '>>', abort the generic lookahead.

2008-07-10  Marek Safar  <marek.safar@gmail.com>

	A fix for bug #319902
	* cs-tokenizer.cs: Always look-ahed for `>='  when tokenizing `>'.

2008-07-10  Marek Safar  <marek.safar@gmail.com>

	A fix for bug #406371
	* statement.cs: Moved EmitSymbolInfo to Block.

2008-07-09  Marek Safar  <marek.safar@gmail.com>

	* ecore.cs: Report better error for extension method overload failures.

2008-07-09  Marek Safar  <marek.safar@gmail.com>

	* expression.cs (Is): No need to box reference values.

2008-07-09  Marek Safar  <marek.safar@gmail.com>

	* class.cs: Use event resolve context when initializing CreateEmitContext.

2008-07-09  Marek Safar  <marek.safar@gmail.com>

	A fix for bug #394436
	* anonymous.cs, class.cs, expression.cs, lambda.cs: Emit correctly extension
	method used inside expression trees. Added more LINQ to expression tree
	conversions.

2008-07-08  Marek Safar  <marek.safar@gmail.com>

	A fix for bug #378189, #370577
	* lambda.cs, ecore.cs: Implemented 3.0 enhancement to better conversion
	from expression.

2008-07-08  Marek Safar  <marek.safar@gmail.com>

	* anonymous.cs, class.cs, decl.cs: Emit CompilerGenerated attribute
	hierarchically.

2008-07-08  Marek Safar  <marek.safar@gmail.com>

	A fix for bug #406702
	* anonymous.cs: Always park anonymous method in the nearest parent storey.
